added 2nd heading (h2)

--- a/code.html
+++ b/code.html
@@ -6,8 +6,10 @@
     <body>
         <h1>
             Hello, and welcome to my first code
-
         </h1>
+        <h2>
+            Thanks for the help!
+        </h2>
         My first Code!
     </body>
 </html>
