Added style to h1

--- a/code.html
+++ b/code.html
@@ -4,7 +4,7 @@
         <title>Code</title>
     </head>
     <body>
-        <h1>
+        <h1 style= "color: blue;">
             Hello, and welcome to my first code
         </h1>
         <h2>
