--- a/code.html
+++ b/code.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1 style="color: blue;">
-            Hello, and welcome to my first code
+            Hello, and welcome to my first code!
         </h1>
         <h2>
             Thanks for the help!
